Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122783

Material.theme doesn't propagate to ListView header when elevation animated

    XMLWordPrintable

Details

    • c7248004c (dev), aa7abcfe1 (6.7), 9c74ae38d (tqtc/lts-6.5)

    Description

       

      import QtQuick
      import QtQuick.Controls
      import QtQuick.Controls.Material
      
      ApplicationWindow {
        width: 400
        height: 400
        visible: true
        
        Material.theme: Material.Dark
      
        ListView {
          id: list
          anchors.fill: parent
          model: 4
          delegate: Text { text: index.toString() }
          header: Pane {
            Material.elevation: list.atYBeginning ? 0 : 6
            // Having this breaks the theme
            Behavior on Material.elevation {                     
              NumberAnimation { duration: 125 }
            }
                
            Text { text: "Header" }
          }
        }
      }

       

       

      Attachments

        For Gerrit Dashboard: QTBUG-122783
        # Subject Branch Project Status CR V

        Activity

          People

            mitch_curtis Mitch Curtis
            marcel.gotsch Marcel Gotsch
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes